--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li>About</li>
+				<li>Contact</li>
+			</ul>
+		</nav>    	
+
+
     <%= yield %>
+
+    <footer>
+    	&copy; 2016 Sol Barrera W.
+    </footer>
+
   </body>
 </html>
