--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,8 +1,6 @@
 <h1>Welcome to Panama Bikes!</h1>
 <h2>Your source for best bikes in Panama</h2>
 
-<p>Welcome! The date and time is <%= Time.now %></p>
+<p>Welcome! Our shop will be online soon!</p>
 
-<%# test_variable = 42 %>
-
-<%#= test_variable - 2 %>
+<%= image_tag("bike-flickr.jpg", class: "img-responsive") %>
