--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,9 @@
   <strong>Image url:</strong>
   <%= @product.image_url %>
 </p>
+<p>
+	<%= image_tag(@product.image_url) %>
+</p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
