--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,8 +6,19 @@
         <div class="col-md-4">
           <h3><%= product.name %></h3>
           <figure>
-            <%= image_tag(product.image_url, class: "img-responsive") %>
+            <% if (product.image_url != nil) %>
+              <%= image_tag(product.image_url, class: "img-responsive") %>
+            <% end %>
           </figure>
+            <%  if (product.color != nil) 
+                  theColor = product.color
+                else
+                  theColor = "N/A"
+                end  
+            %>
+          <p>Color: <%= theColor %><br>
+            <%= product.description %>
+          </p>
           <p><%= link_to 'View More', product, class: "btn btn-default large" %></p>
 
         </div>
@@ -15,34 +26,6 @@
     </div>
 
 <div class="row">
-    <h1>Product Summary</h1>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Description</th>
-          <th>Image url</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <% @products.each do |product| %>
-          <tr>
-            <td><%= product.name %></td>
-            <td><%= product.description %></td>
-            <td><%= product.image_url %></td>
-            <td><%= link_to 'Show', product %></td>
-            <td><%= link_to 'Edit', edit_product_path(product) %></td>
-            <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-    <br>
-
-    <%= link_to 'Add New Product', new_product_path, class: "btn btn-info" %>
-
+  <br>
+  <%= link_to 'Add New Product', new_product_path, class: "btn btn-info" %>
 </div>
