--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,8 +15,11 @@
   <%= @product.image_url %>
 </p>
 <p>
-	<%= image_tag(@product.image_url) %>
+  <strong>Color:</strong>
+  <%= @product.color %>
 </p>
 
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Back', products_path %> |
+
