--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @product.name %>
+	<strong>Name:</strong>
+	<%= @product.name %>
 </p>
 
 <p>
@@ -14,12 +14,21 @@
   <strong>Image url:</strong>
   <%= @product.image_url %>
 </p>
+
+
+<%  if ((@product.color == nil) || (@product.color.rstrip == ""))
+      theColor = "N/A"
+    else
+      theColor = @product.color
+    end  
+%>
 <p>
-  <strong>Color:</strong>
-  <%= @product.color %>
+	<strong>Color:</strong> <%= theColor %></p>
+<p>
+	<%= image_tag(@product.image_url) %>
 </p>
 
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %> |
+<%= link_to 'Back', products_path %>
 
