--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,7 @@
 <p>
 	<strong>Color:</strong> <%= theColor %></p>
 <p>
-	<%= image_tag(@product.image_url) %>
+	<%= image_tag(@product.image_url, class: "img-responsive") %>
 </p>
 
 
