--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -3,9 +3,8 @@
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <% theCount = @products.count %>
-    <% theCount.times do |i| %>
-      <li data-target="#carousel-example-generic" data-slide-to="<%= i %>" <%= "class=active" if i == 0 %>></li>
+    <% @products.each_with_index do |product, index| %>
+      <li data-target="#carousel-example-generic" data-slide-to="<%= index %>"  class=<%= " active" if index == 0 %>></li>
     <% end %>
 
   </ol>
