--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -1,7 +1,9 @@
 
-    	<div class="item<%= " active" if product == @products.first %>">
+    <div class="item<%= " active" if product == @products.first %>">
+			<a href="/products/<%= product.id %> ">
       	<%= image_tag(product.image_url) %>
-      	<div class="carousel-caption">
-        	<h3><%= product.name %></h3>
-      	</div>
-      </div>
+      </a>
+    	<div class="carousel-caption">
+      	<h3><%= product.name %></h3>
+    	</div>
+    </div>
