--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,5 +35,6 @@
 
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
+<%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Back', products_path %>
 
