--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Welcome to Panama Bikes!</h1>
 <h2>Your source for best bikes in Panama</h2>
+<h3>This is a new routed page for exercise 5.1: Routes</h3>
 
 <p>Welcome! Our shop will be online soon!</p>
+
+<h4><%= link_to 'Go to Landing Page', home_path %></h4>
+
 
 <%= image_tag("bike-flickr.jpg", class: "img-responsive") %>
