--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
           <a class="navbar-brand" href="/">Panama Bikes</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/home">Home</a></li>
-          <li><a href="/products">Products</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><%= link_to 'Home', home_path %></li>
+          <li><%= link_to 'Products', products_path %></li>
+          <li><%= link_to 'About', about_path %> </li>
+          <li><%= link_to 'Contact', contact_path %></li>
         </ul>
       </nav> 
     </header>
