--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -28,3 +28,8 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+<div>
+  <%= params[:example_key] %>
+  <%= params[:example_key].to_i * 10 %>
+</div>
