--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,14 @@
           <li><%= link_to 'About', about_path %> </li>
           <li><%= link_to 'Contact', contact_path %></li>
         </ul>
+
+        <%= form_tag("/products", method: "get", :class => 'navbar-form navbar-right') do %>
+          <%= label_tag(:q, "Search for:") %>
+          <%= text_field_tag(:q, '',class: 'form-control') %>
+          <%= submit_tag("Search", :class => 'btn btn-default') %>
+        <% end %>
       </nav> 
+
     </header>
     
    	
