--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,32 +11,32 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :price %>
-    <%= f.text_field :price %>
+    <%= f.text_field :price, class:'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :description %>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class:'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :image_url %>
-    <%= f.text_field :image_url %>
+    <%= f.text_field :image_url, class:'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= f.label :color %><br>
-    <%= f.text_field :color %>
+    <%= f.text_field :color, class:'form-control' %>
   </div> 
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit', :class => 'btn btn-default' %>
   </div>
 <% end %>
