--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,20 +18,30 @@
     <header>
       <nav class="navbar navbar-default">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Panama Bikes</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li><%= link_to 'Home', home_path %></li>
-          <li><%= link_to 'Products', products_path %></li>
-          <li><%= link_to 'About', about_path %> </li>
-          <li><%= link_to 'Contact', contact_path %></li>
-        </ul>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>        
 
-        <%= form_tag("/products", method: "get", :class => 'navbar-form navbar-right') do %>
-          <%= label_tag(:q, "Search for:") %>
-          <%= text_field_tag(:q, '',class: 'form-control') %>
-          <%= submit_tag("Search", :class => 'btn btn-default') %>
-        <% end %>
+          <a class="navbar-brand" href="/">Panama Bikes</a>
+        </div><!--end navbar-header -->
+
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><%= link_to 'Home', home_path %></li>
+            <li><%= link_to 'Products', products_path %></li>
+            <li><%= link_to 'About', about_path %> </li>
+            <li><%= link_to 'Contact', contact_path %></li>
+          </ul>
+
+          <%= form_tag("/products", method: "get", :class => 'navbar-form navbar-right') do %>
+            <%= label_tag(:q, "Search for:") %>
+            <%= text_field_tag(:q, '',class: 'form-control') %>
+            <%= submit_tag("Search", :class => 'btn btn-default') %>
+          <% end %>
+        </div>
       </nav> 
 
     </header>
