--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,15 @@
             <li><%= link_to 'About', about_path %> </li>
             <li><%= link_to 'Contact', contact_path %></li>
           </ul>
+          <ul class="nav pull-right">
+            <li>
+            <% if user_signed_in? %>
+              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+            <% else %>
+              <%= link_to('Login', new_user_session_path) %>
+            <% end %>
+            </li>
+          </ul>
 
           <%= form_tag("/products", method: "get", :class => 'navbar-form navbar-right') do %>
             <%= label_tag(:q, "Search for:") %>
@@ -48,6 +57,8 @@
     
    	
     <div class="container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
 
